force-app/main/default/objects/User/fields/CommunicationPreference__c.field-meta.xml
<CustomField>
    <fullName>CommunicationPreference__c</fullName>
    <description>TV-512 513</description>
    <label>Communication Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>