force-app/main/default/objects/User/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <description>Valid values for testing are: 10000868 and 10002255</description>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>