force-app/main/default/objects/User/fields/SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_ID__c</fullName>
    <externalId>true</externalId>
    <label>SAP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>