force-app/main/default/objects/User/fields/TVE_Default_Assignee__c.field-meta.xml
<CustomField>
    <fullName>TVE_Default_Assignee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine the default user</description>
    <label>TVE Default Assignee</label>
    <type>Checkbox</type>
</CustomField>