force-app/main/default/objects/User/listViews/AllUsers.listView-meta.xml
<ListView>
    <fullName>AllUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Employee_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_ID__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Users</label>
    <language>en_US</language>
</ListView>